--- a/src/app/componentes/modal-registro-negociacao/modal-registro-negociacao.component.css
+++ b/src/app/componentes/modal-registro-negociacao/modal-registro-negociacao.component.css
@@ -1,3 +1,9 @@
+.titulo {
+  display: flex;
+  align-items: center;
+}
+
+
 label {
   display: block;
   margin-top: 50px;
@@ -5,10 +11,22 @@ label {
 
 button{
   margin-left: 20px;
+
 }
 
 mat-dialog-content{
   margin-top: 20px;
 }
+
+.botao{
+  color: var(--custom-app-background) !important;
+  background-color: var(--custom-app-primary);
+}
+
+.botao2{
+  background-color: var(--custom-app-secondary);
+  margin-right: 40px;
+}
+
 
 
