--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 :root {
-  --custom-app-primary: #688F4E;
+  --custom-app-primary: #2B463C;
+  --custom-app-secondary: #688F4E;
   --custom-app-background: #F4F1E9;
   --custom-app-warn: #f44336;
 }
